Prevent detecting flat ground when there are no coplanar regions. That is territory of "assume" flat ground.